修改个人信息的链接

--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -85,19 +85,19 @@
               I code in Python, Java, JavaScript/Node.js. I'm learning golang.
             </p>
             <!-- StackExchange User Flair http://stackoverflow.com/users/flair -->
-            <a href="http://stackoverflow.com/users/2142577/laike9m" target="_blank">
-              <img src="https://stackoverflow.com/users/flair/2142577.png" width="208" height="58"
-                   alt="profile for laike9m on Stack Exchange, a network of free, community-driven Q&amp;A sites"
-                   title="profile for laike9m on Stack Exchange, a network of free, community-driven Q&amp;A sites">
+            <a href="http://stackoverflow.com/users/1877738/metaboy" target="_blank">
+              <img src="https://stackoverflow.com/users/flair/1877738.png" width="208" height="58"
+                   alt="profile for metaboy on Stack Exchange, a network of free, community-driven Q&amp;A sites"
+                   title="profile for metaboy on Stack Exchange, a network of free, community-driven Q&amp;A sites">
             </a>
             <!--https://github.com/lepture/github-cards -->
-{#            <div class="github-card" data-user="laike9m" data-target="blank"></div>#}
+{#            <div class="github-card" data-user="metaboy" data-target="blank"></div>#}
 {#            <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>#}
             <div id="social-logos">
               <a href="mailto:yxiong.wang@gmail.com" target="_blank">
                 <img src="{% static 'css3two_blog/images/webicon-mail-m.png' %}" alt="E-mail">
               </a>
-              <a href="http://wangyuxiong.com/blog/rss" title="my feed" target="_blank">
+              <a href="http://www.wangyuxiong.com/blog/rss" title="my feed" target="_blank">
                 <img src="{% static 'css3two_blog/images/webicon-rss-m.png' %}" alt="RSS feed">
               </a>
               <a href="https://github.com/wangyuxiong" title="metaboy on GitHub" target="_blank">
@@ -109,12 +109,12 @@
               <a href="https://twitter.com/laike9m" title="metaboy on Twitter" target="_blank">
                 <img src="{% static 'css3two_blog/images/webicon-twitter-m.png' %}" alt="Twitter logo">
               </a>
-              <a href="https://plus.google.com/u/0/+Yaolaike9mZuo/posts" title="metaboy on Google+" target="_blank">
+              <a href="https://plus.google.com/u/0/+yxiongwang/posts" title="metaboy on Google+" target="_blank">
                 <img src="{% static 'css3two_blog/images/webicon-googleplus-m.png' %}" alt="Google+ logo">
               </a>
-              <a href="http://www.linkedin.com/profile/view?id=242350350" title="metaboy on LinkedIn" target="_blank">
-                <img src="{% static 'css3two_blog/images/webicon-linkedin-m.png' %}" alt="LinkedIn logo">
-              </a>
+{#              <a href="http://www.linkedin.com/profile/view?id=242350350" title="metaboy on LinkedIn" target="_blank">#}
+{#                <img src="{% static 'css3two_blog/images/webicon-linkedin-m.png' %}" alt="LinkedIn logo">#}
+{#              </a>#}
             </div>
             <div style="margin-top: 15px">
               <!-- Begin MailChimp Signup Form -->
@@ -141,49 +141,40 @@
                 #mc_embed_signup label.error {display:block; float:none; width:auto; margin-left:1.05em; text-align:left; padding:.5em 0;}
               </style>
               <!--<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">-->
-              <div id="mc_embed_signup">
-              <form action="//laike9m.us3.list-manage.com/subscribe/post?u=292026f5547a0cbd3ec8e9f6d&amp;id=416f7bcbc7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <label for="mce-EMAIL">
-                  Sign up for laike9m.com email newsletter
-                  <span style="font-size: 1px">(limit to tech-related articles)</span>
-                </label>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_292026f5547a0cbd3ec8e9f6d_416f7bcbc7" value=""></div>
-                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-              </form>
-              </div>
+{#              <div id="mc_embed_signup">#}
+{#              <form action="//laike9m.us3.list-manage.com/subscribe/post?u=292026f5547a0cbd3ec8e9f6d&amp;id=416f7bcbc7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>#}
+{#                <label for="mce-EMAIL">#}
+{#                  Sign up for wangyuxiong.com email newsletter#}
+{#                  <span style="font-size: 1px">(limit to tech-related articles)</span>#}
+{#                </label>#}
+{#                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>#}
+{#                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->#}
+{#                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_292026f5547a0cbd3ec8e9f6d_416f7bcbc7" value=""></div>#}
+{#                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>#}
+{#              </form>#}
+{#              </div>#}
               <!--End mc_embed_signup-->
             </div>
             <br />
             <div id="blogroll">
               <h2 style="font-size:18px; color: #333333">Blogroll</h2>
               <p>
-                <a href="http://blog.binux.me" target="_blank">Binuxの杂货铺</a>
+                <a href="http://smilejay.com/" target="_blank">笑遍世界</a>
               </p>
               <p>
-                <a href="http://www.darkof.com/" target="_blank">Adam Wen's Blog</a>
+                <a href="http://fwhyy.com/" target="_blank">冯威的个人博客</a>
               </p>
               <p>
-                <a href="http://lilydjwg.is-programmer.com/" target="_blank">依云's Blog</a>
+                <a href="http://www.lugw.net/" target="_blank">老陆的博客</a>
               </p>
               <p>
-                <a href="http://zhangxiaoyang.me/" target="_blank">zhangxiaoyang.me</a>
+                <a href="http://www.itzhai.com/" target="_blank">IT宅</a>
               </p>
               <p>
-                <a href="http://blog.wuxianbin.cn/" target="_blank">Happybin's Blog</a>
+                <a href="http://www.coderli.com/" target="_blank">OneCoder</a>
               </p>
               <p>
-                <a href="http://www.tianjun.ml/" target="_blank">Tian Jun</a>
-              </p>
-              <p>
-                <a href="http://richardzhang.info/" target="_blank">理查德</a>
-              </p>
-              <p>
-                <a href="http://bambooom.github.io/" target="_blank">Bambooom</a>
-              </p>
-              <p>
-                <a href="http://proupy.com/" target="_blank">singpenguin</a>
+                <a href="http://wuyuans.com/" target="_blank">Wuyuan's Blog</a>
               </p>
             </div>
           </div>
@@ -208,8 +199,8 @@
         </a>
       </p>
       <p>
-        <a href="https://github.com/laike9m/My_Blog">SourceCode@Github</a> |
-        <a href="https://www.digitalocean.com/?refcode=a582fa751343">Hosted on DigitalOcean</a> |
+        <a href="https://github.com/wangyuxiong/My_Blog">SourceCode@Github</a> |
+        <a href="https://www.linode.com/?r=34538aea2c73d2828d424fe013f58d491772e288">Hosted on Linode</a> |
         <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a>
       </p>
     </footer>
