--- a/css3two_blog/templates/css3two_blog/blogpost.html
+++ b/css3two_blog/templates/css3two_blog/blogpost.html
@@ -3,7 +3,7 @@
 {% load mytags %}
 
 {% block head %}
-  <title>{{ blogpost.title }} - laike9m's blog</title>
+  <title>{{ blogpost.title }} - metaboy's blog</title>
   <meta name="description" content={{ blogpost.description }}>
 {% endblock head %}
 
@@ -16,7 +16,7 @@
 {% autoescape off %}
   <article>
     <header>
-      <a style="display: none" href="https://plus.google.com/+Yaolaike9mZuo?rel=author">Google</a>
+      <a style="display: none" href="https://plus.google.com/+yxiongwang?rel=author">Google</a>
       <p class="meta">
         <time pubdate="{{ blogpost.pub_date }}" data-updated="{{ blogpost.last_edit_date }}">
           {{ blogpost.pub_date|date:'M'|upper }}
@@ -29,7 +29,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'laike9m'; // required: replace example with your forum shortname
+        var disqus_shortname = 'metaboy'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
