修改个人信息的链接

--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -103,9 +103,9 @@
               <a href="https://github.com/wangyuxiong" title="metaboy on GitHub" target="_blank">
                 <img src="{% static 'css3two_blog/images/webicon-github-m.png' %}" alt="GitHub logo">
               </a>
-              <a href="http://stackoverflow.com/users/2142577/laike9m" title="metaboy on stackoverflow" target="_blank">
-                <img src="{% static 'css3two_blog/images/webicon-stackoverflow-m.png' %}" alt="GitHub logo">
-              </a>
+{#              <a href="http://stackoverflow.com/users/2142577/laike9m" title="metaboy on stackoverflow" target="_blank">#}
+{#                <img src="{% static 'css3two_blog/images/webicon-stackoverflow-m.png' %}" alt="GitHub logo">#}
+{#              </a>#}
               <a href="https://twitter.com/laike9m" title="metaboy on Twitter" target="_blank">
                 <img src="{% static 'css3two_blog/images/webicon-twitter-m.png' %}" alt="Twitter logo">
               </a>
