--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -168,7 +168,7 @@
                 <a href="http://www.lugw.net/" target="_blank">老陆的博客</a>
               </p>
                 <p>
-                <a href="http://www.luohw.com/" target="_blank">流水账</a>
+                <a href="http://www.luohw.com/" target="_blank">若有所思</a>
               </p>
               <p>
                 <a href="http://www.itzhai.com/" target="_blank">IT宅</a>
