老博客链接

--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -46,8 +46,8 @@
             <li><a href="/blog">Home</a></li>
             <li><a href="/blog/archive">Archives</a></li>
             <li><a href="/blog/about">About site&me</a></li>
-            <li><a href="/blog/projects">Projects</a></li>
-            <li><a href="/blog/talks">Talks</a></li>
+{#            <li><a href="/blog/projects">Projects</a></li>#}
+{#            <li><a href="http://blog.wangyuxiong.com"></a></li>#}
             <li><a href="/blog/contact">Contact me</a></li>
           </ul>
         </div>
@@ -82,7 +82,7 @@
 {#              , <strong>nijikon</strong>, crazy <strong>Atlético Madrid supporter</strong>#}
 {#            </p>#}
             <p>
-              I code in Python, Java, JavaScript/Node.js. I'm learning golang.
+              I code in Java，Python, JavaScript. I'm learning Node.js.
             </p>
             <!-- StackExchange User Flair http://stackoverflow.com/users/flair -->
             <a href="http://stackoverflow.com/users/1877738/metaboy" target="_blank">
@@ -106,9 +106,9 @@
 {#              <a href="http://stackoverflow.com/users/2142577/laike9m" title="metaboy on stackoverflow" target="_blank">#}
 {#                <img src="{% static 'css3two_blog/images/webicon-stackoverflow-m.png' %}" alt="GitHub logo">#}
 {#              </a>#}
-              <a href="https://twitter.com/laike9m" title="metaboy on Twitter" target="_blank">
-                <img src="{% static 'css3two_blog/images/webicon-twitter-m.png' %}" alt="Twitter logo">
-              </a>
+{#              <a href="https://twitter.com/laike9m" title="metaboy on Twitter" target="_blank">#}
+{#                <img src="{% static 'css3two_blog/images/webicon-twitter-m.png' %}" alt="Twitter logo">#}
+{#              </a>#}
               <a href="https://plus.google.com/u/0/+yxiongwang/posts" title="metaboy on Google+" target="_blank">
                 <img src="{% static 'css3two_blog/images/webicon-googleplus-m.png' %}" alt="Google+ logo">
               </a>
@@ -158,6 +158,9 @@
             <br />
             <div id="blogroll">
               <h2 style="font-size:18px; color: #333333">Blogroll</h2>
+                <p>
+                <a href="http://blog.wangyuxiong.com/" target="_blank">点滴技术</a>
+              </p>
               <p>
                 <a href="http://smilejay.com/" target="_blank">笑遍世界</a>
               </p>
