增加分类菜单

--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -155,6 +155,22 @@
 {#              </div>#}
               <!--End mc_embed_signup-->
             </div>
+              <br/>
+              <div id = "blogroll">
+                  <h2 style="font-size:18px; color: #333333">categroy</h2>
+               <p>
+                <a href="/blog/category/work">work</a>
+              </p>
+                  <p>
+                <a href="/blog/category/programming">programming</a>
+              </p>
+                  <p>
+                <a href="/blog/category/life">life</a>
+              </p>
+                  <p>
+                <a href="/blog/category/read">read</a>
+              </p>
+              </div>
             <br />
             <div id="blogroll">
               <h2 style="font-size:18px; color: #333333">Blogroll</h2>
