--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -75,16 +75,15 @@
               <h2 id="hi">Hi, I'm metaboy</h2>
             </div>
             <div class="clear"></div>
-{#            <p>#}
-{#              Graduate student of#}
-{#              <a href="http://english.ict.cas.cn/">ICT</a>#}
-{#              , <strong>free Software developer</strong>#}
-{#              , <strong>nijikon</strong>, crazy <strong>Atlético Madrid supporter</strong>#}
-{#            </p>#}
             <p>
-              I code in Java，Python, JavaScript. I'm learning Node.js.
+              Work at
+              <a href="http://www.aliyun.com/">Aliyun</a>
+              , <strong>Software developer</strong>
             </p>
-            <!-- StackExchange User Flair http://stackoverflow.com/users/flair -->
+            <p>
+              I code in Java，Python, JavaScript. I'm learning Go.
+            </p>
+
             <a href="http://stackoverflow.com/users/1877738/metaboy" target="_blank">
               <img src="https://stackoverflow.com/users/flair/1877738.png" width="208" height="58"
                    alt="profile for metaboy on Stack Exchange, a network of free, community-driven Q&amp;A sites"
@@ -103,12 +102,7 @@
               <a href="https://github.com/wangyuxiong" title="metaboy on GitHub" target="_blank">
                 <img src="{% static 'css3two_blog/images/webicon-github-m.png' %}" alt="GitHub logo">
               </a>
-{#              <a href="http://stackoverflow.com/users/2142577/laike9m" title="metaboy on stackoverflow" target="_blank">#}
-{#                <img src="{% static 'css3two_blog/images/webicon-stackoverflow-m.png' %}" alt="GitHub logo">#}
-{#              </a>#}
-{#              <a href="https://twitter.com/laike9m" title="metaboy on Twitter" target="_blank">#}
-{#                <img src="{% static 'css3two_blog/images/webicon-twitter-m.png' %}" alt="Twitter logo">#}
-{#              </a>#}
+
               <a href="https://plus.google.com/u/0/+yxiongwang/posts" title="metaboy on Google+" target="_blank">
                 <img src="{% static 'css3two_blog/images/webicon-googleplus-m.png' %}" alt="Google+ logo">
               </a>
@@ -140,20 +134,6 @@
                 #mc_embed_signup #mce-success-response {color:#529214; display:none;}
                 #mc_embed_signup label.error {display:block; float:none; width:auto; margin-left:1.05em; text-align:left; padding:.5em 0;}
               </style>
-              <!--<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">-->
-{#              <div id="mc_embed_signup">#}
-{#              <form action="//laike9m.us3.list-manage.com/subscribe/post?u=292026f5547a0cbd3ec8e9f6d&amp;id=416f7bcbc7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>#}
-{#                <label for="mce-EMAIL">#}
-{#                  Sign up for wangyuxiong.com email newsletter#}
-{#                  <span style="font-size: 1px">(limit to tech-related articles)</span>#}
-{#                </label>#}
-{#                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>#}
-{#                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->#}
-{#                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_292026f5547a0cbd3ec8e9f6d_416f7bcbc7" value=""></div>#}
-{#                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>#}
-{#              </form>#}
-{#              </div>#}
-              <!--End mc_embed_signup-->
             </div>
               <br/>
               <div id = "blogroll">
@@ -224,7 +204,12 @@
         <a href="https://github.com/wangyuxiong/My_Blog">SourceCode@Github</a> |
         <a href="https://www.linode.com/?r=34538aea2c73d2828d424fe013f58d491772e288">Hosted on Linode</a> |
         <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a>
+
+        <script language="javascript" type="text/javascript" src="http://js.users.51.la/4465702.js"></script>
+            <noscript><a href="http://www.51.la/?4465702" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/4465702.asp" style="border:none" /></a>
+            </noscript>
       </p>
+
     </footer>
   </div>
 
