remove google-analytics，国内访问速度太慢了

--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -21,7 +21,7 @@
   ga('create', 'UA-69544114-1', 'auto');
   ga('send', 'pageview');
   </script>
-  <script async src='//www.google-analytics.com/analytics.js'></script>
+{#  <script async src='//www.google-analytics.com/analytics.js'></script>#}
   <!-- End Google Analytics -->
 </head>
 
