--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -17,10 +17,13 @@
   {% endblock pagecss %}
   <!-- Google Analytics -->
   <script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', 'UA-69544114-1', 'auto');
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-78299910-1', 'auto');
   ga('send', 'pageview');
-  </script>
+</script>
 {#  <script async src='//www.google-analytics.com/analytics.js'></script>#}
   <!-- End Google Analytics -->
 </head>
@@ -137,7 +140,7 @@
             </div>
               <br/>
               <div id = "blogroll">
-                  <h2 style="font-size:18px; color: #333333">categroy</h2>
+                  <h2 style="font-size:18px; color: #333333">Categroy</h2>
                <p>
                 <a href="/blog/category/work">work</a>
               </p>
