google site verification

--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   {% block head %}
+      <meta name="google-site-verification" content="TbrSIAl6xbt9gt9WOvW_hfzNj_wX6zHjSf2N5gSPZ0A" />
     <title>metaboy's blog</title>
     <meta name="description" content="分享关于技术，生活，ACG的点滴">
   {% endblock head %}
