--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -207,7 +207,8 @@
       <p>
         <a href="https://github.com/wangyuxiong/My_Blog">SourceCode@Github</a> |
         <a href="https://www.linode.com/?r=34538aea2c73d2828d424fe013f58d491772e288">Hosted on Linode</a> |
-        <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a>
+        <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a> |
+          <a href="http://www.wangyuxiong.com/sitemap">sitemap</a> |
 
         <script language="javascript" type="text/javascript" src="http://js.users.51.la/4465702.js"></script>
             <noscript><a href="http://www.51.la/?4465702" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/4465702.asp" style="border:none" /></a>
