--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -5,10 +5,10 @@
   {% block head %}
       <meta name="google-site-verification" content="TbrSIAl6xbt9gt9WOvW_hfzNj_wX6zHjSf2N5gSPZ0A" />
     <title>metaboy's blog</title>
-    <meta name="description" content="分享关于技术，生活，ACG的点滴">
+    <meta name="description" content="分享关注云计算,大数据,分布式系统,数据仓库,自动化测试等相关领域.">
   {% endblock head %}
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'css3two_blog/images/favicon2.ico' %}"/>
-  <meta name="keywords" content="website keywords, website keywords" />
+  <meta name="keywords" content="metaboy,云计算,大数据,分布式系统,数据仓库,自动化测试" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" type="text/css" href="{% static 'css3two_blog/css/style.css' %}" />
   <!-- modernizr enables HTML5 elements and feature detects -->
@@ -17,15 +17,20 @@
     <!-- cause I want to put css at top  -->
   {% endblock pagecss %}
   <!-- Google Analytics -->
+{#  <script>#}
+{#  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){#}
+{#  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),#}
+{#  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)#}
+{#  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');#}
+{#  ga('create', 'UA-78299910-1', 'auto');#}
+{#  ga('send', 'pageview');#}
+{#</script>#}
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-78299910-1', 'auto');
-  ga('send', 'pageview');
-</script>
-{#  <script async src='//www.google-analytics.com/analytics.js'></script>#}
+   window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+   ga('create', 'UA-78299910-1', 'auto');
+   ga('send', 'pageview');
+  </script>
+  <script async src='//www.google-analytics.com/analytics.js'></script>
   <!-- End Google Analytics -->
 </head>
 
@@ -140,13 +145,14 @@
               </style>
             </div>
               <br/>
+              <hr style="border:1px solid; height:2px" width="100%" />
               <div id = "blogroll">
                   <h2 style="font-size:18px; color: #333333">Categroy</h2>
                <p>
-                <a href="/blog/category/work">work</a>
+                  <a href="/blog/category/work">work</a>
               </p>
                   <p>
-                <a href="/blog/category/programming">programming</a>
+                - <a href="/blog/category/programming">programming</a>
               </p>
                   <p>
                 <a href="/blog/category/life">life</a>
@@ -156,6 +162,7 @@
               </p>
               </div>
             <br />
+            <hr style="border:1px solid; height:2px" width="100%" />
             <div id="blogroll">
               <h2 style="font-size:18px; color: #333333">Blogroll</h2>
                 <p>
