--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -149,16 +149,16 @@
               <div id = "blogroll">
                   <h2 style="font-size:18px; color: #333333">Categroy</h2>
                <p>
-                  <a href="/blog/category/work">work</a>
+                  - <a href="/blog/category/work">work</a>
               </p>
                   <p>
                 - <a href="/blog/category/programming">programming</a>
               </p>
                   <p>
-                <a href="/blog/category/life">life</a>
+                - <a href="/blog/category/life">life</a>
               </p>
                   <p>
-                <a href="/blog/category/read">read</a>
+                - <a href="/blog/category/read">read</a>
               </p>
               </div>
             <br />
