--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -207,7 +207,7 @@
         <a href="/">Home</a> |
         <a href="/blog/archive">Archives</a> |
         <a href="/blog/about">About</a> |
-        <a href="">Projects</a> |
+{#        <a href="">Projects</a> |#}
         <a href="/blog/contact">Contact
         </a>
       </p>
