--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -81,7 +81,7 @@
         <div class="sidebar">
           <div class="bio" data-twttr-id="twttr-sandbox-0">
             <div class="illustration">
-              <img src="/static/css3two_blog/images/thumbnail.png" alt="laike9m">
+              <img src="/static/css3two_blog/images/devops.jpg" alt="metaboy">
               <h2 id="hi">Hi, I'm metaboy</h2>
             </div>
             <div class="clear"></div>
@@ -91,7 +91,7 @@
               , <strong>Software developer</strong>
             </p>
             <p>
-              I code in Java，Python, JavaScript. I'm learning Go.
+              I code in Java，Python, NodeJS. I'm learning Go.
             </p>
 
             <a href="http://stackoverflow.com/users/1877738/metaboy" target="_blank">
