--- a/css3two_blog/templates/css3two_blog/blog_base.html
+++ b/css3two_blog/templates/css3two_blog/blog_base.html
@@ -218,8 +218,8 @@
         <a href="http://www.css3templates.co.uk">design from css3templates.co.uk</a> |
           <a href="http://www.wangyuxiong.com/sitemap">sitemap</a> |
 
-        <script language="javascript" type="text/javascript" src="http://js.users.51.la/4465702.js"></script>
-            <noscript><a href="http://www.51.la/?4465702" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/4465702.asp" style="border:none" /></a>
+        <script language="javascript" type="text/javascript" src="https://js.users.51.la/4465702.js"></script>
+            <noscript><a href="https://www.51.la/?4465702" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="http://img.users.51.la/4465702.asp" style="border:none" /></a>
             </noscript> |
         <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5024212'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D5024212%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
         </script>
